Fix the alignment to center box between Chrome and Firefox

--- a/core/app/shell/src/themes/suite8/css/components/_popover.scss
+++ b/core/app/shell/src/themes/suite8/css/components/_popover.scss
@@ -26,7 +26,7 @@
 
 .popover-wrapper {
   z-index: 1;
-  top: 0.95em!important;
+  top: 1.2em !important
 }
 
 .scroll-thin {
